# IITP_python

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md  index.rst  interpolation.rst  methods.md  performance.md
docs/_build/doctrees/: cli.doctree  environment.pickle  index.doctree  interpolation.doctree  modules.doctree  tests.doctree
docs/_build/html/: .buildinfo  cli.html  genindex.html  index.html  interpolation.html  license.html  methods.html  modules.html  objects.inv  performance.html  py-modindex.html  reference.html  search.html  searchindex.js  tests.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  interpolation.doctree  license.doctree  methods.doctree  performance.doctree  reference.doctree  tests.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/interpolation/: bilinear_interp.html  image_process.html
docs/_build/html/_modules/src/tests/: test_bilinear_interpolation.html  test_image_processing.html
docs/_build/html/_modules/tests/: test_bilinear_interpolation.html  test_image_processing.html
docs/_build/html/_sources/: cli.rst.txt  index.md.txt  index.rst.txt  modules.rst.txt  reference.md.txt  tests.rst.txt
plots/: performance.py
src/interpolation/: __init__.py  bicubic_interpolation.py  bilinear_interp.py  console.py  image_process.py
src/tests/: __init__.py  test_bilinear_interpolation.py  test_image_processing.py
