[project]
name = "interpolation"
version = "0.1.0"
description = ""
authors = [
    {name = "Shamsutdinov Amir",email = "shamsutdinov.az@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry.scripts]
interpolation = "interpolation.console:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
