[project]
name = "interpolation"
version = "0.1.0"
description = ""
authors = [
    {name = "Shamsutdinov Amir",email = "shamsutdinov.az@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "ruff (>=0.9.10,<0.10.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "nox (>=2025.2.9,<2026.0.0)",
    "nox-poetry (>=1.2.0,<2.0.0)"
]

[tool.poetry.scripts]
interpolation = "interpolation.console:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
sphinx-click = "^6.0.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM", "I", "N", "R"]
ignore = ["F401", "N812", "N806"]
fixable = ["ALL"]
unfixable = []
